--- a/templates/showgames.html
+++ b/templates/showgames.html
@@ -9,36 +9,35 @@
         crossorigin="anonymous"></script>
 
     <!-- Latest compiled and minified CSS -->
+    <link href="{{ url_for('static', filename='js/carousel.css') }}" rel="stylesheet" type="text/css" media="all">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
         crossorigin="anonymous">
     <script defer src="https://use.fontawesome.com/releases/v5.0.2/js/all.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
         crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='js/carousel.js') }}"></script>
 </head>
 
 <body>
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <div class="container">
+  <div id="gameCarousel" class="carousel slide" data-ride="carousel" data-interval="9000">
     <ol class="carousel-indicators">
-      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    {% for i in n %}
+      <li data-target="#carouselExampleIndicators" data-slide-to="{{ i }}" {% if loop.first %} class="active" {% endif %}></li>
+    {% endfor %}
     </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100" src="https://cf.geekdo-images.com/images/pic172295.jpg" alt="First slide">
+    <div class="carousel-inner row w-100 mx-auto">
+      {% for game in games %}
+      <div class="carousel-item col-md-4 {% if loop.first %}active{% endif%}">
+        <img class="img-fluid mx-auto d-block" src="{{ game.imageurl }}" alt="{{ game.name_col }}">
       </div>
-      <div class="carousel-item">
-          <img class="d-block w-100" src="https://cf.geekdo-images.com/images/pic187388.jpg" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100" src="https://cf.geekdo-images.com/images/pic786075.jpg" alt="Third slide">
-      </div>
+      {% endfor %}
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <a class="carousel-control-prev" href="#gameCarousel" role="button" data-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <a class="carousel-control-next" href="#gameCarousel" role="button" data-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
