--- a/static/js/carousel.css
+++ b/static/js/carousel.css
@@ -1,4 +1,14 @@
 
+    /* .card-body.game-summary {
+        font-family: 'Josefin Slab';
+        font-weight: bold;
+    }
+
+    .card-body.game-desc {
+        font-family: 'Lato', sans-serif;
+    } */
+
+
     .fa-chevron-left {
         color: #6F1F7E;
         margin-right: 200px;
